Fix issue 2. When canvas overflow occurs, resize again.

--- a/chrome/skin/classic/pcman.css
+++ b/chrome/skin/classic/pcman.css
@@ -1,4 +1,4 @@
-#topwin {}
-#canvas {}
-#box3 {position:fixed; top:-100px;}
+#topwin {background-color:#000;}
+#canvas {background-color:#000;}
+#box3 {position:fixed; top:-100px; background:#fff;}
 #input_proxy {-moz-appearance:none; position:fixed; border:none; opacity:.9; background-color:-moz-field; color:-moz-fieldtext; padding:0; margin:0;}
